<resources>
    <string name="app_name">Better Half</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="facebook_app_id">331528337811143</string>
    <string name="fb_login_protocol_scheme">fb331528337811143</string>
    <string name="better_half">Better Half</string>
    <string name="start_by_giving_us_a_nickname_this_is_a_public_but_doesnt_have_to_be_your_real_name">Start by giving us a nickname ,this is a public but doesnt have to be your real name</string>
    <string name="start_typing">Start typing</string>
    <string name="you_re_creating_a_new_account_please_enter_you_gender_to_continue">You\'re creating a new account please enter you gender to continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="we_need_this_information_to_help_match_you_to_your_perfect_partner">We need this information to help match you to your perfect partner</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="setting">Setting</string>
    <string name="message">Message</string>
    <string name="what_do_you_do_for_a_living">What do you do for a living ?</string>
    <string name="this_help_us_connect_you_to_relevant_matches">This help us connect you to relevant matches</string>
    <string name="explore">Explore</string>
    <string name="liked_you">Liked You</string>
    <string name="people_you_have_favourited_appear_here_for_quick_access_don_t_worry_they_won_t_know_you_favourited_them">People you have favourited appear here for quick access.Don\'t worry, they won\'t know you favourited them</string>
    <string name="name_here">Name here</string>
    <string name="_22">22</string>
    <string name="profession">Profession</string>
    <string name="country">Country</string>
    <string name="settings">Settings</string>
    <string name="betterhalf_gmail_com">betterhalf@gmail.com</string>
    <string name="profile_setting">Profile setting</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log out</string>
    <string name="about_us">About us</string>
    <string name="by_continue_you_agree_to_our_terms_amd_policy">By continue you agree to our terms amd policy</string>
    <string name="select_image">Select Image</string>
    <string name="the_more_information_you_provide_allows_us_to_match_you_with_more_relevant_singles">The more information you provide allows us to match you with more relevant singles</string>
    <string name="education_career"><![CDATA[Education & career]]></string>
    <string name="by_clicking_continue_you_agree_with_our_terms_conditions_learn_how_we_precess_your_data_in_our_privacy_policy_and_cookies_policy"><![CDATA[By clicking continue, you agree with our Terms & Conditions. Learn how we process your data in our Privacy Policy and Cookies Policy]]></string>
</resources>
