<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        app:riv_corner_radius="40dip"
        android:background="@color/blue"
        android:src="@drawable/lovepic"
        android:layout_margin="7dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:id="@+id/name"
        android:layout_marginBottom="200dp"
        android:textSize="26sp"
        android:text="@string/name_here"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintEnd_toEndOf="@id/name"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:id="@+id/age"
        android:layout_marginBottom="200dp"
        android:textSize="22sp"
        android:text="@string/_22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintStart_toStartOf="@id/age"
        app:layout_constraintEnd_toEndOf="@id/age"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:id="@+id/profession"
        android:layout_marginBottom="200dp"
        android:textSize="22sp"
        android:text="@string/profession" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profession"
        app:layout_constraintStart_toStartOf="@id/profession"
        app:layout_constraintEnd_toEndOf="@id/profession"
        android:textColor="#ffffff"
        android:id="@+id/country"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="200dp"
        android:textSize="22sp"
        android:text="@string/country" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:background="@drawable/cicleview"
        android:id="@+id/message"
        android:src="@drawable/ic_baseline_chat_bubble_24"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/fav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:padding="12dp"
        android:background="@drawable/cicleview"
        android:src="@drawable/ic_favorite_black_24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>