<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/you_re_creating_a_new_account_please_enter_you_gender_to_continue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/heart"
        android:layout_width="225dp"
        android:layout_height="130dp"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/gender" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="What's is your gender ?"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gender"
        app:layout_constraintEnd_toEndOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@id/gender"
        android:text="@string/male"
        android:id="@+id/male"
        android:textColor="@color/pink"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="30sp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/male"
        app:layout_constraintEnd_toEndOf="@id/male"
        app:layout_constraintTop_toBottomOf="@id/male"
        android:text="@string/female"
        android:id="@+id/female"
        android:textColor="@color/pink"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="30sp">

    </TextView>






</androidx.constraintlayout.widget.ConstraintLayout>